# della_parser_bot

./: .gitignore  Makefile  celerybeat-schedule  docker-compose.yml  pyproject.toml
.github/workflows/: continuous_integration.yml
db_files/: main.db
della_parser_bot/: Dockerfile  celery.py  config.py  main.py  requirements.txt  start.sh
della_parser_bot/parser/: __init__.py  dev.ipynb  downloader.py  parser.py  url_generator.js  url_generator.py  url_provider.py  url_utils.py
della_parser_bot/src/: bot.py  db.py  dialogs.py  filters.py  filters_chat.py  messages.py  models.py
tests/: test_della_loader.py  test_della_parser_bot.py  test_functional.py
tests/data/: test_page.html
